# Derrick

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yml
.claude/agents/: arbitrage-math-reviewer.md  cairo-executor-engineer.md  dex-adapter-engineer.md  risk-safety-reviewer.md  rust-bot-engineer.md  starknet-infra-specialist.md
config/: default.toml
contracts/executor/: Scarb.toml
contracts/executor/src/: lib.cairo
contracts/executor/tests/: test_executor.cairo
crates/admin-cli/: Cargo.toml
crates/admin-cli/src/: cli.rs  client.rs  commands.rs  main.rs
crates/bot/: Cargo.toml
crates/bot/src/: calls.rs  config.rs  inclusion.rs  lib.rs  main.rs  observability.rs  pipeline.rs  registry.rs  shutdown.rs  wiring.rs
crates/chain/: Cargo.toml
crates/chain/src/: error.rs  executor.rs  lib.rs  provider.rs  rpc.rs  selectors.rs  simulator.rs  submitter.rs  watcher.rs
crates/dex/: Cargo.toml
crates/dex/src/: factory.rs  jediswap_v1.rs  lib.rs  quoter.rs
crates/domain/: Cargo.toml
crates/domain/src/: amount.rs  error.rs  lib.rs  opportunity.rs  pool.rs  quote.rs  token.rs  traits.rs
crates/ledger/: Cargo.toml
crates/ledger/migrations/: 0001_attempts.sql
crates/ledger/src/: ledger.rs  lib.rs
crates/math/: Cargo.toml
crates/math/src/: cpmm.rs  lib.rs
crates/risk/: Cargo.toml
crates/risk/src/: clock.rs  config.rs  lib.rs  manager.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: lib.rs  profit.rs  sizer.rs  spatial.rs
