[package]
name        = "admin-cli"
description = "derrick — admin CLI for the on-chain DerrickExecutor contract (whitelist setup, withdraw, status)."
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
publish.workspace      = true
rust-version.workspace = true

[[bin]]
name = "derrick-admin"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
bot                 = { workspace = true }
chain               = { workspace = true }
domain              = { workspace = true }

starknet            = { workspace = true }
starknet-types-core = { workspace = true }
primitive-types     = { workspace = true }

anyhow              = { workspace = true }
clap                = { workspace = true }
config              = { workspace = true }
serde               = { workspace = true }
tokio               = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
url                 = { workspace = true }
