[package]
name        = "bot"
description = "derrick — binary that wires watcher, detector, sizer, simulator, executor, risk."
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
publish.workspace      = true
rust-version.workspace = true

[[bin]]
name = "derrick"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
domain     = { workspace = true }
chain    = { workspace = true }
dex      = { workspace = true }
strategy = { workspace = true }
risk     = { workspace = true }

primitive-types     = { workspace = true }
starknet            = { workspace = true }
starknet-types-core = { workspace = true }

anyhow             = { workspace = true }
chrono             = { workspace = true }
clap               = { workspace = true }
config             = { workspace = true }
futures            = { workspace = true }
metrics            = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
uuid               = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
uuid        = { workspace = true }
