[package]
name        = "chain"
description = "Starknet RPC/WS clients, simulator, and on-chain executor caller for derrick."
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
publish.workspace      = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
domain        = { workspace = true }
async-trait         = { workspace = true }
futures             = { workspace = true }
primitive-types     = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
starknet            = { workspace = true }
starknet-types-core = { workspace = true }
thiserror           = { workspace = true }
tokio               = { workspace = true }
tokio-tungstenite   = { workspace = true }
tracing             = { workspace = true }
url                 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
