[package]
name        = "dex"
description = "DEX adapters implementing the domain Pool trait."
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
publish.workspace      = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
domain        = { workspace = true }
math        = { workspace = true }
async-trait         = { workspace = true }
primitive-types     = { workspace = true }
starknet-types-core = { workspace = true }
thiserror           = { workspace = true }
tracing             = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
