[package]
name        = "domain"
description = "Core types, traits, and errors for the derrick arbitrage bot."
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
publish.workspace      = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait         = { workspace = true }
primitive-types     = { workspace = true }
serde               = { workspace = true }
starknet-types-core = { workspace = true }
thiserror           = { workspace = true }
uuid                = { workspace = true }

[dev-dependencies]
proptest   = { workspace = true }
serde_json = { workspace = true }
